# checksum_cli

./: CHANGELOG.md  Cargo.toml
src/: algorithm.rs  main.rs
